cairo (1.8.10-1) unstable; urgency=low

  * New upstream bugfix release.
  * debian/patches,
    debian/source/format,
    debian/rules,
    debian/control,
    debian/compat:
    + Update to source format 3.0 (quilt).
    + Update to debhelper compat level 7.
    + Update Standards-Version to 3.8.4.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 23 Feb 2010 10:53:10 +0100

cairo (1.8.8-2) unstable; urgency=low

  * Upload to unstable.

 -- Sebastian Dröge <slomo@debian.org>  Thu, 18 Jun 2009 08:59:17 +0200

cairo (1.8.8-1) experimental; urgency=low

  [ Loïc Minier ]
  * Use "udeb" consistently to describe this flavor
  * Rename CFLAGS to CFLAGS_MAIN for consistency
  * Rename %-flavor-stamp targets to %-stamp-flavor
  * Also strip dependency_libs in DEB_DIST_DIR
  * Always lowercase the flavor name in vars
  * Drop unused configure-main and udeb targets
  * Drop dangerous configure target listed in .PHONY
  * Drop build-main and build-udeb targets
  * Make the build and configure rules implicit ones
  * Define builddir using the current_flavor
  * Split flavors installation into a install-% target
  * Move debian/build-* and /dist-* to nicer places
  * Misc cleanups
  * Factor configure flags
  * Fix --host and --build handling
  * Remove useless cleanups
  * Factor "touch" calls
  * Save and restore config.guess and .sub
  * Drop INSTALL_PROGRAM, not needed with dh_strip
  * Factor CFLAGS; add -Wall
  * Implement an optional optimized flavor

  [ Sebastian Dröge ]
  * New upstream bugfix release.
  * Update Standards-Version to 3.8.2.
  * Update sections of binary packages

 -- Sebastian Dröge <slomo@debian.org>  Wed, 17 Jun 2009 16:47:55 +0200

cairo (1.8.6-2) unstable; urgency=low

  * Upload to unstable.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 17 Feb 2009 09:56:44 +0100

cairo (1.8.6-1) experimental; urgency=low

  * New upstream bugfix release.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 16 Dec 2008 14:55:53 +0100
