@@ -83,6 +83,14 @@ configure-common-stamp:
 	# backup the original files to restore them in the clean target
 	cp config.sub config.sub.orig
 	cp config.guess config.guess.orig
+	# Generated by configure and breaks the build if already existing
+	rm -f src/cairo-features.h
+	# Copy in fresh copies of config.{sub,guess}
+	# (these are from autotools-dev, so must Build-Depend on it)
+	-test -r /usr/share/misc/config.sub && \
+	  cp -f /usr/share/misc/config.sub config.sub
+	-test -r /usr/share/misc/config.guess && \
+	  cp -f /usr/share/misc/config.guess config.guess
 	touch $@
 
 configure-stamp-%: configure-common-stamp
@@ -110,14 +118,6 @@ clean:
 	rm -f src/cairo-features.h
 	rm -f *-stamp
 	rm -rf $(buildbasedir) $(installbasedir)
-	# Generated by configure and breaks the build if already existing
-	rm -f src/cairo-features.h
-	# Copy in fresh copies of config.{sub,guess}
-	# (these are from autotools-dev, so must Build-Depend on it)
-	-test -r /usr/share/misc/config.sub && \
-	  cp -f /usr/share/misc/config.sub config.sub
-	-test -r /usr/share/misc/config.guess && \
-	  cp -f /usr/share/misc/config.guess config.guess
 	dh_clean
 
 install-%: build-stamp-%
