@@ -9,6 +9,8 @@ cairo (1.8.10-1) unstable; urgency=low
     + Update to source format 3.0 (quilt).
     + Update to debhelper compat level 7.
     + Update Standards-Version to 3.8.4.
+  * debian/rules:
+    + Update config.guess and config.sub not in clean.
 
  -- Sebastian Dröge <slomo@debian.org>  Tue, 23 Feb 2010 10:53:10 +0100
 
